--- a/paper.bib
+++ b/paper.bib
@@ -62,3 +62,12 @@
 	volume = {205},
 	year = {2016}
 }
+
+
+
+@incollection{Woodhouse1980a,
+	author = {Woodhouse, J.H.},
+	booktitle = {Physics of the {E}arth's Interior},
+	title = {Efficient and stable methods for performing seismic calculations in stratified media},
+	year = {1980}
+}
