--- a/paper.bib
+++ b/paper.bib
@@ -63,11 +63,9 @@
 	year = {2016}
 }
 
-
-
 @incollection{Woodhouse1980a,
 	author = {Woodhouse, J.H.},
-	booktitle = {Physics of the {E}arth's Interior},
+	booktitle = {Physics of the {E}arth's {I}nterior},
+	publisher = {Societ{\`a} Italiana di Fisica},
 	title = {Efficient and stable methods for performing seismic calculations in stratified media},
-	year = {1980}
-}
+	year = {1980}}
